[package]
edition = "2018"
name = "simple_example"
version = "0.1.0"
authors = ["Nick Price <nick@spun.io>"]

[dependencies]
af_packet = { path = "../../" }
num_cpus = "*"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread"], optional = true }

[features]
async-tokio = ["af_packet/async-tokio", "tokio"]